--- a/CoopDEJC/Views/Loans/Loans.cshtml
+++ b/CoopDEJC/Views/Loans/Loans.cshtml
@@ -131,12 +131,14 @@
         </div>
 
         <!--Ventana emergente con la información del prestamo-->
-        <div class="popup" id="idpop">
-            <div class="container">
-                <div class="btn-close" onclick="closepopup()">&times;</div>
-                <div class="title">
+        <div class="popup-info" id="idpop">
+            <center class="formBox-info">
+            <div class="container-info">
+                <div class="title-info">
                     <h2>Loans 1</h2>
+                    <hr />
                     <h5 class="subtitle">XXX-XXXX-XXX</h5>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><path d="M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z" fill="rgba(17,43,60,1)"></path></svg>
                 </div>
                 <div class="rowamount">
                     <div class="amount">
@@ -165,7 +167,7 @@
                         <h3>Paid</h3>
                         <h3>$3,000.00</h3>
                     </div>
-                    <div class="Insurance">
+                    <!--<div class="Insurance">
                         <div class="col1">
                             <h3>xxx-xxxx-xxx</h3>
                             <h3>Type(OBJECT)</h3>
@@ -176,18 +178,18 @@
                             <h3>Value</h3>
                         </div>
                     </div>
+                    -->
                     <div class="libtn">
                         <button class="lview">Loans View</button>
                         <button class="lfee">Loans Fee</button>
                     </div>
                 </div>
             </div>
+            </center>
         </div>
         <script>
             function closepopup(){
             }
         </script>
-
-        <
     </body>
 </html>
