--- a/CoopDEJC/Views/Investment/Investment.cshtml
+++ b/CoopDEJC/Views/Investment/Investment.cshtml
@@ -126,12 +126,15 @@
         </div>
 
          <!--Ventana emergente con la información de la inversión-->
-        @*        <div class="popup" id="idpop">
-            <div class="container">
-                <div class="btn-close" onclick="closepopup()">&times;</div>
-                <div class="title">
+        <div class="popup-info" id="idpop">
+            <center class="formBox-info">
+            <div class="container-info">
+                
+                <div class="title-info">
                     <h2>Investment 1</h2>
+                    <hr />
                     <h5 class="subtitle">XXX-XXXX-XXX</h5>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><path d="M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z" fill="rgba(17,43,60,1)"></path></svg>
                 </div>
                 <div class="rowamount">
                     <div class="amount">
@@ -155,22 +158,19 @@
                         <button class="iview">Investment View</button>
                         <button class="ifee">Investment Fee</button>
                     </div>
-                </div>
             </div>
+            </center>
         </div>
-        <script>
-            function closepopup(){
-            }
-        </script>*@
 
         <!--Ventana emergente de la solicitud de una inversión-->
-        @*<div class="popup" id="idpop">
-            <div class="container">
-                <div class="btn-close" onclick="closepopup()">&times;</div>
-                <div class="title">
-                    <h2>NewInvestment</h2>
+        <div class="popup" id="idpop">
+            <center class="formBox">
+            <div class="container-popup">
+                <div class="title-popup">
+                    <h2>New investment</h2>
+                    <hr />
                 </div>
-                <div>
+                <div id="form-div">
                     <form>
                         <div class="textboxes">
                             <input class="input_box" name="iamount" type="number" min="1" autocomplete="off" placeholder="Amount" required />
@@ -183,8 +183,12 @@
                         </div>
                     </form>
                 </div>
-
             </div>
-        </div>*@
+            <span id="popup-img">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><path d="M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z" fill="rgba(17,43,60,1)"></path></svg>
+                <img src="/img/Investment-Illus.svg"/>
+            </span>
+            </center>
+        </div>
     </body>
 </html>
