Add Investment and Loan Fee

--- a/CoopDEJC/Views/Investment/InvestmentReport.cshtml
+++ b/CoopDEJC/Views/Investment/InvestmentReport.cshtml
@@ -21,7 +21,7 @@
     </div>
     <div class="container">
         <div class="title">
-            <h1>Cronograma de Inversiones</h1>
+            <h1>Cronograma de la Inversión #@Model.InversionID</h1>
         </div>
         <div class="idata">
             <h3>Monto a invertir: $@Model.Monto.ToString("N3")</h3>
