--- a/CoopDEJC/Views/Loans/LoansReport.cshtml
+++ b/CoopDEJC/Views/Loans/LoansReport.cshtml
@@ -9,7 +9,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width" />
     <title>LoansReport</title>
 </head>
@@ -19,7 +20,7 @@
     </div>
     <div class="container">
         <div class="title">
-            <h1>Cronograma de Prestamos</h1>
+            <h1>Cronograma del Prestamo #@Model.PrestamoId</h1>
         </div>
         <div class="ldata">
             <h3>Cantidad del prestamo: $@Model.Monto.ToString("N3")</h3>
@@ -27,26 +28,26 @@
             <h3>Tasa de interés mensual: @ViewBag.TEMPCT.ToString("N2")%</h3>
             <h3>Plazo del préstamo: @ViewBag.meses meses</h3>
         </div>
-        <div class="ltable">
-            <table>
+        <div>
+            <table class = "table table-striped table-bordered" style="width:100%">
                 <thead>
                     <tr>
                         <th>Periodos</th>
                         <th>Fechas</th>
-                        <th>Saldo</th>
                         <th>Amortización</th>
                         <th>Interés</th>
                         <th>Cuota</th>
+                        <th>Saldo</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>0</td>
                         <td>@Model.FechaInicio.ToShortDateString()</td>
-                        <td>@Model.Monto</td>
                         <td>0</td>
                         <td>0</td>
                         <td>0</td>
+                        <td>@String.Format(new System.Globalization.CultureInfo("es-DO"),"{0:C}",Model.Monto)</td>
                     </tr>
                     @for(int i = 1; i < rowcount; i++)
                     {      
@@ -56,10 +57,10 @@
                         <tr>
                             <td>@i.ToString()</td>
                             <td>@Model.FechaInicio.AddMonths(i).ToShortDateString()</td>
-                            <td>@saldo</td>
-                            <td>@amortizacion</td>
-                            <td>@interes</td>
-                            <td>@cuota</td>
+                            <td>@String.Format(new System.Globalization.CultureInfo("es-DO"),"{0:C}",amortizacion)</td>
+                            <td>@String.Format(new System.Globalization.CultureInfo("es-DO"),"{0:C}",interes)</td>
+                            <td>@String.Format(new System.Globalization.CultureInfo("es-DO"),"{0:C}",cuota)</td>
+                            <td>@String.Format(new System.Globalization.CultureInfo("es-DO"),"{0:C}",saldo)</td>
                         </tr>        
                     }
                 </tbody>
