--- a/CoopDEJC/Views/Investment/InvestmentFee.cshtml
+++ b/CoopDEJC/Views/Investment/InvestmentFee.cshtml
@@ -5,8 +5,6 @@
 
     double monto = Model.Monto;
     double callinteres = Math.Round(ViewBag.TEM, 2);
-
-
 }
 <!DOCTYPE html>
 <html>
@@ -15,6 +13,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width" />
     <title>LoansReport</title>
+    <style>
+        h1 {
+            text-align: center;
+            color: royalblue;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
@@ -23,12 +27,28 @@
         <div class="title">
             <h1>Cuotas de la Inversión #@Model.CuotaInversionID</h1>
         </div>
+        <br />
         <div class="ifdata">
-            <h3>Monto a invertir: @String.Format(new System.Globalization.CultureInfo("es-DO"),"{0:C}",Model.Monto)</h3>
-            <h3>Tasa de interés anual: @Model.Inversion.Interes.ToString("N2")%</h3>
-            <h3>Tasa de interés mensual: @ViewBag.TEMPCT.ToString("N2")%</h3>
-            <h3>Plazo de la inversión: @ViewBag.meses meses</h3>
+            <table class="table table-striped table-bordered table-hover table-sm" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>Monto a invertir</th>
+                        <th>Tasa de Interés Anual</th>
+                        <th>Tasa de Interés Mensual</th>
+                        <th>Plazo de la inversión</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>@String.Format(new System.Globalization.CultureInfo("es-DO"),"{0:C}",Model.Monto)</td>
+                        <td>@Model.Inversion.Interes.ToString("N2")%</td>
+                        <td>@ViewBag.TEMPCT.ToString("N2")%</td>
+                        <td>@ViewBag.meses meses</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+        <br />
         <div>
             <table class="table table-striped table-bordered" style="width:100%">
                 <thead>
