--- a/CoopDEJC/Views/Investment/InvestmentReport.cshtml
+++ b/CoopDEJC/Views/Investment/InvestmentReport.cshtml
@@ -11,9 +11,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width" />
     <title>LoansReport</title>
+    <style>
+        h1{
+            text-align:center;
+            color: royalblue;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
@@ -23,21 +30,37 @@
         <div class="title">
             <h1>Cronograma de la Inversión #@Model.InversionID</h1>
         </div>
+        <br />
         <div class="idata">
-            <h3>Monto a invertir: $@Model.Monto.ToString("N3")</h3>
-            <h3>Tasa de interés anual: @Model.Interes.ToString("N2")%</h3>
-            <h3>Tasa de interés mensual: @ViewBag.TEMPCT.ToString("N2")%</h3>
-            <h3>Plazo de la inversión: @ViewBag.meses meses</h3>
+            <table class="table table-striped table-bordered table-hover table-sm" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>Monto a invertir</th>
+                        <th>Tasa de Interés Anual</th>
+                        <th>Tasa de Interés Mensual</th>
+                        <th>Plazo de la inversión</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>@String.Format(new System.Globalization.CultureInfo("es-DO"),"{0:C}",Model.Monto)</td>
+                        <td>@Model.Interes.ToString("N2")%</td>
+                        <td>@ViewBag.TEMPCT.ToString("N2")%</td>
+                        <td>@ViewBag.meses meses</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+        <br />  
         <div class="itable">
-            <table>
+            <table class="table table-striped table-bordered" style="width:100%">
                 <thead>
                     <tr>
                         <th>Periodos</th>
                         <th>Fechas</th>
                         <th>Rentabilidad</th>
-                        <th>Monto Acumuladoo</th>
                         <th>Rentabilidad Acumulada</th>
+                        <th>Monto Acumulado</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -45,8 +68,8 @@
                         <td>0</td>
                         <td>@Model.FechaInicio.ToShortDateString()</td>
                         <td>0</td>
-                        <td>@monto</td>
                         <td>0</td>
+                        <td>@monto</td>
                     </tr>
                     @for(int i = 1; i < rowcount; i++)
                     {      
@@ -57,8 +80,8 @@
                             <td>@i.ToString()</td>
                             <td>@Model.FechaInicio.AddMonths(i).ToShortDateString()</td>
                             <td>@valor</td>
-                            <td>@montoacum</td>
                             <td>@rentacum</td>
+                            <td>@montoacum</td>
                         </tr>        
                     }
                 </tbody>
