--- a/CoopDEJC/Views/Loans/LoansFee.cshtml
+++ b/CoopDEJC/Views/Loans/LoansFee.cshtml
@@ -13,6 +13,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width" />
     <title>LoansReport</title>
+    <style>
+        h1 {
+            text-align: center;
+            color: royalblue;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
@@ -22,13 +28,27 @@
             <h1>Cuotas del prestamo #@Model.CuotaPrestamoID</h1>
         </div>
         <div class="lfdata">
-            <h3>Cantidad del prestamo: $@Model.Monto.ToString("N3")</h3>
-            <h3>Tasa de interés anual: @Model.Prestamo.Interes.ToString("N2")%</h3>
-            <h3>Tasa de interés mensual: @ViewBag.TEMPCT.ToString("N2")%</h3>
-            <h3>Plazo del préstamo: @ViewBag.meses meses</h3>
+            <table class="table table-striped table-bordered table-hover table-sm" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>Cantidad del Prestamo</th>
+                        <th>Tasa de Interés Anual</th>
+                        <th>Tasa de Interés Mensual</th>
+                        <th>Plazo del Prestamo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>@String.Format(new System.Globalization.CultureInfo("es-DO"),"{0:C}",Model.Monto)</td>
+                        <td>@Model.Prestamo.Interes.ToString("N2")%</td>
+                        <td>@ViewBag.TEMPCT.ToString("N2")%</td>
+                        <td>@ViewBag.meses meses</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
         <div>
-            <table class="table table-striped table-bordered" style="width:100%">
+            <table class="table table-striped table-bordered " style="width:100%">
                 <thead>
                     <tr>
                         <th>Periodos</th>
